--- a/bug-algorithms.html
+++ b/bug-algorithms.html
@@ -130,9 +130,15 @@
 				}, 10);
 			 }
 
-			$("#runButton").click(function(){
+			$("#runRightTurn").click(function(){
 				$(".path").remove();
 				currentAlgorithm = runRightTurn;
+				startRunning();
+			});
+			 
+			$("#runBug2").click(function(){
+				$(".path").remove();
+				currentAlgorithm = runBug2;
 				startRunning();
 			});
 			 
@@ -312,7 +318,8 @@
 	<circle class="draggable" id="robot" cx="50" cy="50" r="20" fill="red" />
 	<circle class="draggable" id="goal" cx="550" cy="350" r="18" fill="green" />
 </svg><br/>
-<a id="runButton">run</a>
+<a id="runRightTurn">Run Right-Turn method</a>
+<a id="runBug2">Run Bug2</a>
 <a id="stopButton">stop</a>
 
 
