--- a/bug-algorithms.html
+++ b/bug-algorithms.html
@@ -3,7 +3,7 @@
 <head>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script type="text/javascript">
-//https://stackoverflow.com/questions/29261304/how-to-get-the-click-coordinates-relative-to-svg-element-holding-the-onclick-lis
+// https://stackoverflow.com/questions/29261304/how-to-get-the-click-coordinates-relative-to-svg-element-holding-the-onclick-lis
 //https://stackoverflow.com/questions/6858479/rectangle-coordinates-after-transform
 		 $( document ).ready( function(){
 // Find your root SVG element
@@ -44,7 +44,7 @@
 						.appendTo($('#mydrawing'));
 				}
 				drawing=false;
-				$(drawingLines).each(function(){this.remove();});
+				$('.drawingLine').remove();
 				drawingLines=[];
 
 
@@ -72,10 +72,9 @@
 							.attr('x2',loc.x)
 							.attr('y1',loc.y)
 							.attr('y2',loc.y)
-							.attr('r',3)
 							.attr('stroke','blue')
 							.attr('stroke-width',1)
-							//.addClass('drawn')
+							.addClass('drawingLine')
 							.appendTo($('#mydrawing'))
 					);
 				}
@@ -147,8 +146,8 @@
 			function pointInsidePolygon(p, poly){
 				var intersects = [], n=0;
 				for(i=0; i<poly.points.length;i++) {
-					var x1=poly.points[i].x, y1=poly.points[i].y, x2=poly.points[(i+1)%poly.points.length].x, y2=poly.points[(i+1)%poly.points.length].y;
-
+					var x1=poly.points[i].x, x2=poly.points[(i+1)%poly.points.length].x;
+					var y1=poly.points[i].y, y2=poly.points[(i+1)%poly.points.length].y;
 					if((y1 <= p.y && p.y<= y2) || (y2 <= p.y && p.y <= y1)) {
 						if(x1==x2){	//vertical line
 							intersects.push(x1);
@@ -205,7 +204,6 @@
 			function closestPointOnPoly(p, poly){
 				var md=1e6, cp;
 				for(i=0; i<poly.points.length;i++) {
-
 					var x1=poly.points[i].x, y1=poly.points[i].y, x2=poly.points[(i+1)%poly.points.length].x, y2=poly.points[(i+1)%poly.points.length].y;
 					var c = closestPointOnSegment(p.x,p.y,x1,y1,x2,y2);
 					var cd = Math.hypot(p.x-c.x,p.y-c.y);
@@ -214,9 +212,6 @@
 						cp = c;
 					}
 				}
-//console.log(cp);
-				if(cp === undefined) alert(p.x + "cp undefined");
-				if(isNaN(cp.x)) alert("cp is nan");
 				return cp;
 			}
 
@@ -246,12 +241,6 @@
 						md = d;
 						if(d<=0){
 							p=cp;
-							/*
-							 p=[];
-							 var ang = Math.atan2((cp.y-RY()), (cp.x-RX()));
-							 p.x = RX() + RR()*Math.cos(ang);
-							 p.y = RY() + RR()*Math.sin(ang);
-							 */
 						}
 					}
 				});
@@ -272,41 +261,35 @@
 
 
 
-			var bug2={following:false,leaving:false};
+			var bug2={following:false};
 
 			function runBug2(){
 				dx = GX() - RX();
 				dy = GY() - RY();
 				var cp = collision();
-				if(cp && !bug2.leaving) {
+				if(cp) {
 					if(!bug2.following){
-						//bug2.heading = Math.atan2(GY() - RY(), GX() - RX());
-						bug2.following = true;
-						bug2.startPoint = {x:RX(),y:RY()};
-						console.log(bug2.startPoint);
+						if((dx*(cp.x-RX())+dy*(cp.y-RY()))>0){ //if collision is in front
+							bug2.following = true;				//start following
+							bug2.startPoint = {x:RX(),y:RY()};
+						}
 					}
-					var cs = closestPointOnSegment(RX(), RY(), bug2.startPoint.x, bug2.startPoint.y, GX(), GY());
-
-
-					if(((bug2.startPoint.x-GX())*(cp.x-RX()) + (bug2.startPoint.y-GY())*(cp.y-RY()))>0  && Math.hypot(cs.x-RX(),cs.y-RY())<2) {
-						console.log("stop following");
-						bug2.following = false;
-						bug2.leaving=true;
-						dx = GX() - RX();
-						dy = GY() - RY();
+					if(bug2.following){
+						var cs = closestPointOnSegment(RX(), RY(), bug2.startPoint.x, bug2.startPoint.y, GX(), GY());
+						if((dx*(cp.x-RX())+dy*(cp.y-RY()))<0 && Math.hypot(cs.x-RX(),cs.y-RY())<2){
+							bug2.following = false;
+						} else{
+							dx = RY() - cp.y;
+							dy = cp.x - RX();
+							bug2.lastContact = {x:cp.x,y:cp.y};
+						}
 					}
-					dx = RY() - cp.y;
-					dy = cp.x - RX();
-					bug2.lastContact = {x:cp.x,y:cp.y};
-				} else if (bug2.following){
-					var cs = closestPointOnSegment(RX(), RY(), bug2.lastContact.x, bug2.lastContact.y, GX(), GY());
-					dx = cs.x - RX();
-					dy = cs.y - RY();
+				} else {
+					if(bug2.following) { //if following wall but lost contact
+						dx = bug2.lastContact.x - RX();
+						dy = bug2.lastContact.y - RY();
+					}
 				}
-				if(!cp){
-					bug2.leaving=false;
-				}
-
 			};
 		});
 	</script>
