--- a/bug-algorithms.html
+++ b/bug-algorithms.html
@@ -364,10 +364,10 @@
 	<circle class="draggable" id="robot" cx="50" cy="50" r="20" fill="red" />
 	<circle class="draggable" id="goal" cx="550" cy="350" r="18" fill="green" />
 </svg><br/>
-<a id="runRightTurn">Run Right-Turn method</a><br/>
-<a id="runBug1">Run Bug1</a><br/>
-<a id="runBug2">Run Bug2</a><br/>
-<a id="stopButton">stop</a>
+<button id="runRightTurn">Run Right-Turn method</button><br/>
+<button id="runBug1">Run Bug1</button><br/>
+<button id="runBug2">Run Bug2</button><br/>
+<button id="stopButton">stop</button>
 
 
 </body>
