--- a/sim.html
+++ b/sim.html
@@ -360,8 +360,8 @@
 
 <body>
 	<h3>Robot bug algorithm simulator</h3>
-	<p>Click to draw polygon edges. Double-click to finish polygon. Double-click inside polygon to remove.</p>
-	<p>Click and drag to move robot or goal.</p>
+	<p>Click to draw <span style="color:blue">obstacle</span> edges. Double-click to finish obstacle. Double-click inside obstacle to remove.</p>
+	<p>Click and drag to move <span style="color:red">robot</span> or <span style="color:green">goal</span>.</p>
 	<svg id="mydrawing" width="600" height="400" style="border:1px solid black">
 		<circle class="draggable" id="robot" cx="50" cy="50" r="20" fill="red" />
 		<circle class="draggable" id="goal" cx="550" cy="350" r="18" fill="green" />
