added reset, more info

--- a/sim.html
+++ b/sim.html
@@ -402,7 +402,8 @@
 	<button id="runRightTurn">Run Right-Turn</button> <br>
 	<button id="runBug1">Run Bug1</button> <br>
 	<button id="runBug2">Run Bug2</button> <br>
-	<button id="stopButton">stop</button>
+	<button id="stopButton">stop</button> <br>
+	<button onclick="location.reload()">Reset</button>
 	</div>
 
 </body>
