--- a/sim.html
+++ b/sim.html
@@ -391,7 +391,7 @@
 
 <body>
 
-	<svg id="mydrawing" style="position:absolute;top:0;left:0;width:100%;height:100%">
+	<svg id="mydrawing" style="background-color:white;position:absolute;top:0;left:0;width:100%;height:100%">
 		<circle class="draggable" id="robot" cx="50" cy="50" r="20" fill="red" />
 		<circle class="draggable" id="goal" cx="550" cy="350" r="18" fill="green" />
 	</svg>
